--- a/build.gradle
+++ b/build.gradle
@@ -9,33 +9,24 @@ repositories {
 }
 
 dependencies {
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
 }
 
 test {
     useJUnitPlatform()
-
-    testLogging {
-        events "passed", "skipped", "failed"
-
-        showExceptions true
-        exceptionFormat "full"
-        showCauses true
-        showStackTraces true
-        showStandardStreams = false
-    }
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass = 'seedu.bryan.Bryan'
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "Bryan"
+    archiveVersion = "0.1.0"
     archiveClassifier = null
 }
 
-run{
+run {
     standardInput = System.in
 }
