Improve code quality in task status updates
Refactor TaskManager.markTask() and unmarkTask() by extracting a helper
method (formatStatusChangeMessage) to format status change messages.
This reduces code duplication and improves readability in the task
management logic.

This change follows code quality principles by promoting code reuse and
clear separation of formatting logic.

--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,13 @@ application {
 }
 
 shadowJar {
-    archiveBaseName = "Bryan"
-    archiveVersion = "0.1.0"
-    archiveClassifier = null
+    //archiveBaseName = "Bryan"
+    //archiveVersion = "0.1.0"
+    //archiveClassifier = null
+    archiveBaseName.set("BryanChatbot")
+    archiveClassifier.set("")
+    archiveVersion.set("0.1.0")
+    mergeServiceFiles()
 }
 
 run {
